--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- bootstrap cdn -->
-<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"  -->
-      <!-- integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" href="style.css">
 <body>
     <div class="flex">
@@ -11,7 +11,7 @@
                     Add a Note
                 </h5>
                 <div class="form-group">
-                    <textarea name="" id="addTxt" rows="3" class="formcontrol"></textarea>
+                    <textarea name="" id="addTxt" rows="10" columns="1000" class="formcontrol"></textarea>
                 </div>
                 <button class="btn btn-primary" id="addBtn">Add Notes</button>
             </div>
